B-1 search in key, value, and header
